--- a/book.toml
+++ b/book.toml
@@ -15,7 +15,10 @@ create-missing = true
 [preprocessor.links]
 
 [output.html]
+site-url = "/pyqgis/"  # Nome do repositório
 additional-css = ["custom.css"]
+additional-js = ["custom.js"]
+mathjax-support = true
 
 [output.html.search]
 limit-results = 15
